# sky-qoe-lab

./: .gitignore  AGENTS.md  README.md
.github/workflows/: build-release.yml
CeBridge/: README.md
CeBridge/autorun/: codex_bridge.lua
CeBridge/client/: CeBridgeClient.csproj  Program.cs
CeBridge/requests/: sky_capture_manager.lua  sky_capture_status.lua  sky_menu_effect_cycle_once.lua  sky_menu_effect_smoke.lua  sky_menu_outfit_smoke.lua  sky_menu_reload.lua  sky_menu_snapshot.lua  sky_menu_wax_smoke.lua  sky_read_outfit.lua
SkyOutfitReader/: Program.cs  README.md  SkyOutfitReader.csproj
SkyQoEMenu/: CMakeLists.txt  README.md
SkyQoEMenu/src/: chat_bridge.cpp  chat_bridge.h  dllmain.cpp  game_state.cpp  game_state.h  http_server.cpp  http_server.h  level_assets.cpp  level_assets.h  local_effects.cpp  local_effects.h  outfit_changer.cpp  outfit_changer.h  overlay.cpp  overlay.h  snapshot_json.cpp  snapshot_json.h
SkyQoEMenu/tools/: api_test.cpp  harness.cpp  level_asset_inspect.cpp  loader.cpp  loader.manifest  loader.rc.in  loader_telemetry.cpp  loader_telemetry.h  loader_telemetry_test.cpp  process_dump.cpp
docs/plan/20260723.尝试复现一个测身高接口捏/: 20260723.好友码与远端穿搭协议初步还原.md  20260723.尝试复现一个测身高接口捏.md
test/20260723/: 01_har_endpoint_inventory.py  02_extract_sky_protocol_strings.py  03_find_rip_xrefs.py  04_analyze_pe_functions.py  05_find_pointer_references.py  06_inspect_minidump_manager.py  07_index_world_state_dump.py  08_curate_world_state_index.py  09_extract_state_anchors.py
